fixed scrollbars in electron

--- a/src/app/common/components/AppRoot.scss
+++ b/src/app/common/components/AppRoot.scss
@@ -25,7 +25,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	overflow: scroll;
+	overflow: auto;
 	-webkit-overflow-scrolling: touch;
 	box-sizing: border-box;
 	z-index: 1;
